Use main part in `tryAddBatter()` to check collision