@@ -184,6 +184,8 @@ public class PBCakeBlock extends MultipartBlock<PBCakeBlockEntity> {
                 world.playSound(pos.getX(), pos.getY(), pos.getZ(), state.getSoundGroup().getPlaceSound(), SoundCategory.BLOCKS, (state.getSoundGroup().getVolume() + 1.0f) / 2.0f, state.getSoundGroup().getPitch() * 0.8f, true);
                 stack.decrementUnlessCreative(1, player);
                 return ItemActionResult.SUCCESS;
+            } else {
+                return ItemActionResult.FAIL;
             }
         }
 
@@ -304,10 +306,11 @@ public class PBCakeBlock extends MultipartBlock<PBCakeBlockEntity> {
             return true;
         }
 
-        if (batterList.getFirst().getSizeContainer().getSize() / 2.0f - batterList.getFirst().getSizeContainer().getBites() <= cake.getBatterList().getLast().getSizeContainer().getSize() / 2.0f - cake.getBatterList().getLast().getSizeContainer().getBites()) {
+        PBCakeBlockEntity main = cake.getMainPart();
+        if (batterList.get(0).getSizeContainer().getSize() / 2.0f - batterList.get(0).getSizeContainer().getBites() <= main.getBatterList().get(main.getBatterList().size() - 1).getSizeContainer().getSize() / 2.0f - main.getBatterList().get(main.getBatterList().size() - 1).getSizeContainer().getBites()) {
             float batterListHeight = (float) batterList.stream().mapToDouble((batter) -> batter.getSizeContainer().getHeight()).sum();
-            if (cake.getHeight() + batterListHeight <= PedrosBakery.CONFIG.maxCakeHeight.get() && (!cake.hasWorld() || cake.getWorld().doesNotIntersectEntities(null, PBCakeBlockEntity.toShape(batterList, cake.getCachedState(), cake.getWorld(), cake.getPos()).offset(cake.getPos().getX(), cake.getPos().getY() + cake.getHeight() / 16.0f, cake.getPos().getZ()))) && cake.getBatterList().addAll(batterList)) {
-                cake.updateParts();
+            if (main.getHeight() + batterListHeight <= PedrosBakery.CONFIG.maxCakeHeight.get() && (!main.hasWorld() || main.getWorld().doesNotIntersectEntities(null, PBCakeBlockEntity.toShape(batterList, main.getCachedState(), main.getWorld(), main.getPos()).offset(main.getPos().getX(), main.getPos().getY() + main.getHeight() / 16.0f, main.getPos().getZ()))) && main.getBatterList().addAll(batterList)) {
+                main.updateParts();
                 return true;
             }
         }
